--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,7 +53,7 @@ jobs:
 
     - name: Merge new-branch into main
       run: |
-        git merge origin/new-branch -m "Merge new-branch into main"  # Merge the new branch into the main branch
+        git merge origin/new-branch --allow-unrelated-histories -m "Merge new-branch into main"  # Merge with unrelated histories
 
     # Push the changes to the main branch
     - name: Push merged changes to main branch
