--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,143 +1,99 @@
 name: export-and-branch-solution
 
 # Export solution from DEV environment
+# unpack it and prepare, commit and push a git branch with the changes
 
-#  unpack it and prepare, commit and push a git branch with the changes
- 
 on:
-
   workflow_dispatch:
-
     inputs:
-
-      # Change this value
-
       solution_name:
-
         description: 'name of the solution to worked on from Power Platform'
-
         required: true
-
         default: ALMLab
 
-       #Do Not change these values
-
+      # Do Not change these values
       solution_exported_folder:
-
         description: 'folder name for staging the exported solution *do not change*'
-
         required: true
-
         default: out/exported/
 
       solution_folder:
-
         description: 'staging the unpacked solution folder before check-in *do not change*'
-
         required: true
-
         default: out/solutions/
 
-      solution_target_folder: 
-
-       description: 'folder name to be created and checked in *do not change*'
-
-       required: true
-
-       default: solutions/
+      solution_target_folder:
+        description: 'folder name to be created and checked in *do not change*'
+        required: true
+        default: solutions/
 
 env:
-
-#edit your values here
-
   ENVIRONMENT_URL: 'https://org41c53d90.crm4.dynamics.com'
-
   CLIENT_ID: 'c37f4956-70a3-4e74-a2d2-225b579d1a21'
-
   TENANT_ID: '302edaf0-65d6-449a-a796-b83cfb733f0d'
 
 permissions:
-
   contents: write
 
 jobs:
-
   export-from-dev:
-
     runs-on: windows-latest
 
-    # or you can say runs-on: ubuntu-latest
-
     env:
-
       RUNNER_DEBUG: 1
- 
+
     steps:
-
     - uses: actions/checkout@v2
-
       with:
-
         lfs: true
- 
+
     - name: who-am-i action
-
       uses: microsoft/powerplatform-actions/who-am-i@v0
-
       with:
-
         environment-url: ${{env.ENVIRONMENT_URL}}
-
         app-id: ${{env.CLIENT_ID}}
-
         client-secret: ${{ secrets.PowerPlatformSPN }}
-
         tenant-id: ${{env.TENANT_ID}}
- 
- 
+
     - name: export-solution action
-
       uses: microsoft/powerplatform-actions/export-solution@v0
-
       with:
-
         environment-url: ${{env.ENVIRONMENT_URL}}
-
         app-id: ${{env.CLIENT_ID}}
-
         client-secret: ${{ secrets.PowerPlatformSPN }}
-
         tenant-id: ${{env.TENANT_ID}}
-
         solution-name: ${{ github.event.inputs.solution_name }}
-
         solution-output-file: ${{ github.event.inputs.solution_exported_folder}}/${{ github.event.inputs.solution_name }}.zip
- 
+
     - name: unpack-solution action
-
       uses: microsoft/powerplatform-actions/unpack-solution@v0
-
       with:
-
         solution-file: ${{ github.event.inputs.solution_exported_folder}}/${{ github.event.inputs.solution_name }}.zip
-
         solution-folder: ${{ github.event.inputs.solution_folder}}/${{ github.event.inputs.solution_name }}
-
         solution-type: 'Unmanaged'
-
         overwrite-files: true
- 
+
     - name: branch-solution, prepare it for a PullRequest
-
       uses: microsoft/powerplatform-actions/branch-solution@v0
-
       with:
-
         solution-folder: ${{ github.event.inputs.solution_folder}}/${{ github.event.inputs.solution_name }}
-
         solution-target-folder: ${{ github.event.inputs.solution_target_folder}}/${{ github.event.inputs.solution_name }}
-
         repo-token: ${{ secrets.GH_TOKEN }}
-
         allow-empty-commit: true
- 
+
+    # Fetch the latest changes from the remote 'main' branch
+    - name: Fetch latest changes from 'main' branch
+      run: |
+        git remote set-url origin https://github-actions:${{ secrets.GH_TOKEN }}@github.com/anney1/github-action-repo.git
+        git fetch origin main  # Fetch the latest changes from the remote 'main' branch
+
+    # Checkout the 'main' branch and merge 'new-branch' into 'main'
+    - name: Checkout and merge 'new-branch' into 'main'
+      run: |
+        git checkout main  # Checkout the main branch
+        git merge origin/new-branch --allow-unrelated-histories -m "Merge new-branch into main"
+
+    # Push the merged changes to the 'main' branch
+    - name: Push changes to 'main' branch
+      run: |
+        git push origin main  # Push the changes to the main branch
