--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,11 +39,12 @@ jobs:
       with:
         lfs: true
 
-    # Step to install Power Apps CLI (PAC)
+    # Step to install Power Apps CLI using Chocolatey
     - name: Install Power Apps CLI
       run: |
-        Invoke-WebRequest -Uri https://aka.ms/install-powerapps-cli -OutFile install-pac.ps1
-        powershell -ExecutionPolicy Bypass -File ./install-pac.ps1
+        Set-ExecutionPolicy Bypass -Scope Process -Force; 
+        Invoke-WebRequest -Uri https://community.chocolatey.org/api/v2/package/powerapps-cli -OutFile powerapps-cli.nupkg;
+        choco install ./powerapps-cli.nupkg -y
 
     - name: who-am-i action
       uses: microsoft/powerplatform-actions/who-am-i@v1
