--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,13 +39,21 @@ jobs:
       with:
         lfs: true
 
-    # Step to install Power Apps CLI from MSI Installer
+    # Step to install Power Apps CLI via MSI
     - name: Install Power Apps CLI via MSI
       run: |
         Invoke-WebRequest -Uri "https://aka.ms/download-powerapps-cli" -OutFile "PowerAppsCLI.msi"
         Start-Process msiexec.exe -ArgumentList "/i", "PowerAppsCLI.msi", "/quiet", "/norestart" -Wait
         Remove-Item -Force "PowerAppsCLI.msi"
 
+    # Verify PAC installation by checking version
+    - name: Verify PAC installation
+      run: |
+        pac --version
+        if ($?) { Write-Host "Power Apps CLI installed successfully" }
+        else { Write-Host "Power Apps CLI installation failed" }
+
+    # Proceed with the who-am-i action only if PAC is installed
     - name: who-am-i action
       uses: microsoft/powerplatform-actions/who-am-i@v1
       with:
@@ -74,9 +82,4 @@ jobs:
         overwrite-files: true
 
     - name: branch-solution, prepare it for a PullRequest
-      uses: microsoft/powerplatform-actions/branch-solution@v1
-      with:
-        solution-folder: ${{ github.event.inputs.solution_folder}}/${{ github.event.inputs.solution_name }}
-        solution-target-folder: ${{ github.event.inputs.solution_target_folder}}/${{ github.event.inputs.solution_name }}
-        repo-token: ${{ secrets.GH_TOKEN }}
-        allow-empty-commit: true
+      uses: microsoft/powerplatform-actions/
