--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,23 +39,18 @@ jobs:
       with:
         lfs: true
 
-    # Install Power Apps CLI (PAC) using MSI
+    # Install Power Apps CLI (PAC) via direct download and setup
     - name: Install Power Apps CLI
       run: |
-        Invoke-WebRequest -Uri "https://aka.ms/download-powerapps-cli" -OutFile "PowerAppsCLI.msi"
-        Start-Process msiexec.exe -ArgumentList "/i", "PowerAppsCLI.msi", "/quiet", "/norestart" -Wait
-        Remove-Item -Force "PowerAppsCLI.msi"
+        # Download PAC Installer
+        Invoke-WebRequest -Uri "https://aka.ms/download-powerapps-cli" -OutFile "PowerAppsCLI.zip"
+        Expand-Archive -Path "PowerAppsCLI.zip" -DestinationPath "$env:ProgramFiles\PowerAppsCLI"
 
-    # Verify PAC installation
-    - name: Verify PAC installation
-      run: |
-        $pacPath = Get-Command pac -ErrorAction SilentlyContinue
-        if ($pacPath) {
-          Write-Host "Power Apps CLI installed successfully."
-        } else {
-          Write-Host "Power Apps CLI installation failed."
-          exit 1
-        }
+        # Add PAC to PATH
+        $env:PATH += ";$env:ProgramFiles\PowerAppsCLI"
+
+        # Verify if PAC is installed
+        pac --version
 
     # Proceed with the who-am-i action only if PAC is installed
     - name: who-am-i action
