--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,29 +1,22 @@
 name: export-and-branch-solution
 
-# Export solution from DEV environment
-# Unpack it and prepare, commit, and push a git branch with the changes
-
 on:
   workflow_dispatch:
     inputs:
       solution_name:
-        description: 'Name of the solution to work on from Power Platform'
+        description: 'name of the solution to worked on from Power Platform'
         required: true
         default: ALMLab
-
-      # Do Not change these values
       solution_exported_folder:
-        description: 'Folder name for staging the exported solution *do not change*'
+        description: 'folder name for staging the exported solution *do not change*'
         required: true
         default: out/exported/
-
       solution_folder:
-        description: 'Staging the unpacked solution folder before check-in *do not change*'
+        description: 'staging the unpacked solution folder before check-in *do not change*'
         required: true
         default: out/solutions/
-
       solution_target_folder:
-        description: 'Folder name to be created and checked in *do not change*'
+        description: 'folder name to be created and checked in *do not change*'
         required: true
         default: solutions/
 
@@ -38,47 +31,33 @@ permissions:
 jobs:
   export-from-dev:
     runs-on: windows-latest
-
     env:
       RUNNER_DEBUG: 1
-
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v3  # Use the latest version of checkout action
       with:
         lfs: true
 
-    - name: Install Node.js (if not installed)
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'  # Use a supported Node.js version
-
-    - name: Install Power Apps CLI (PAC)
-      run: |
-        npm install -g pac
-        pac --version  # Verify the installation
-
     - name: who-am-i action
-      uses: microsoft/powerplatform-actions/who-am-i@v1
+      uses: microsoft/powerplatform-actions/who-am-i@v1  # Use latest available version
       with:
-        environment-url: ${{ env.ENVIRONMENT_URL }}
-        app-id: ${{ env.CLIENT_ID }}
+        environment-url: ${{env.ENVIRONMENT_URL}}
+        app-id: ${{env.CLIENT_ID}}
         client-secret: ${{ secrets.PowerPlatformSPN }}
-        tenant-id: ${{ env.TENANT_ID }}
-        cloud: Public
+        tenant-id: ${{env.TENANT_ID}}
 
     - name: export-solution action
-      uses: microsoft/powerplatform-actions/export-solution@v0
+      uses: microsoft/powerplatform-actions/export-solution@v1  # Use latest available version
       with:
-        environment-url: ${{ env.ENVIRONMENT_URL }}
-        app-id: ${{ env.CLIENT_ID }}
+        environment-url: ${{env.ENVIRONMENT_URL}}
+        app-id: ${{env.CLIENT_ID}}
         client-secret: ${{ secrets.PowerPlatformSPN }}
-        tenant-id: ${{ env.TENANT_ID }}
+        tenant-id: ${{env.TENANT_ID}}
         solution-name: ${{ github.event.inputs.solution_name }}
         solution-output-file: ${{ github.event.inputs.solution_exported_folder}}/${{ github.event.inputs.solution_name }}.zip
 
     - name: unpack-solution action
-      uses: microsoft/powerplatform-actions/unpack-solution@v0
+      uses: microsoft/powerplatform-actions/unpack-solution@v1  # Use latest available version
       with:
         solution-file: ${{ github.event.inputs.solution_exported_folder}}/${{ github.event.inputs.solution_name }}.zip
         solution-folder: ${{ github.event.inputs.solution_folder}}/${{ github.event.inputs.solution_name }}
@@ -86,7 +65,7 @@ jobs:
         overwrite-files: true
 
     - name: branch-solution, prepare it for a PullRequest
-      uses: microsoft/powerplatform-actions/branch-solution@v0
+      uses: microsoft/powerplatform-actions/branch-solution@v1  # Use latest available version
       with:
         solution-folder: ${{ github.event.inputs.solution_folder}}/${{ github.event.inputs.solution_name }}
         solution-target-folder: ${{ github.event.inputs.solution_target_folder}}/${{ github.event.inputs.solution_name }}
