--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,10 +38,13 @@ jobs:
       with:
         lfs: true
 
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'  # Ensure you use the required Node.js version
+
     - name: Install Power Platform CLI
-      run: |
-        Install-Module -Name Microsoft.PowerPlatform.Cds.Client -Force -AllowClobber
-        Import-Module Microsoft.PowerPlatform.Cds.Client
+      run: npm install -g pac-cli
 
     - name: who-am-i action
       uses: microsoft/powerplatform-actions/who-am-i@v1  # Use latest available version
