--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,14 +38,14 @@ jobs:
       with:
         lfs: true
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'  # Ensure you use the required Node.js version
+    # - name: Setup Node.js
+    #   uses: actions/setup-node@v2
+    #   with:
+    #     node-version: '14'  # Ensure you use the required Node.js version
 
-    - name: Install Power Platform CLI
-      run: npm install -g pac-cli
-
+    - name: Install Power Apps CLI (PAC)
+      uses: microsoft/powerplatform-actions/install-pac@v1   
+       
     - name: who-am-i action
       uses: microsoft/powerplatform-actions/who-am-i@v1  # Use latest available version
       with:
